make update fields optional
